# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

# GYP: //xwalk/xwalk_tests.gypi:xwalk_shell_test_apk
android_resources("xwalkdriver_webview_shell_resources") {
  resource_dirs = [ "java/res" ]
  android_manifest = "java/AndroidManifest.xml"
}
android_apk("xwalkdriver_webview_shell_apk") {
  apk_name = "XwalkDriverWebViewShell"
  deps = [
    ":xwalkdriver_webview_shell_resources",
  ]
  DEPRECATED_java_in_dir = "java/src"
  android_manifest = "java/AndroidManifest.xml"
}
